added more words to my word bank, still cannot make my javascript file reach as an external file

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 <head>
 
     <title>Its Freakin' Hangman Man!</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <script src='assets/javascript/games.js' type='text/javascript'></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    
 
     
     <!--<style>
@@ -56,17 +57,25 @@
 
     var words = [
 
-      "fantastic",
+      "uber",
 
-      "spectacular",
+      "dollar",
 
-      "california",
+      "purple",
 
       "festival",
 
       "playlist",
 
-      "keyboard"
+      "keyboard", 
+
+      "firestorm",
+
+      "personality",
+
+      "mountain",
+
+      "penchant"
 
     ];
 
